--- a/src/assets/all.scss
+++ b/src/assets/all.scss
@@ -1,3 +1,5 @@
 @import 'bootstrap/scss/functions';
-@import './variables';
+@import '@/assets/helpers/variables';
 @import 'bootstrap/scss/bootstrap';
+
+@import '@/assets/helpers/base';
