--- a/src/assets/helpers/_variables.scss
+++ b/src/assets/helpers/_variables.scss
@@ -298,19 +298,25 @@ $cyans: (
 // fusv-enable
 
 // scss-docs-start theme-color-variables
-$primary: $blue !default;
-$secondary: $gray-600 !default;
+$primary: #ce9d7b; // $blue !default;
+$primary-light: #fff7f2; //a !default;
+$primary-heavy: #9e5d30; //a !default;
+$secondary: #2c3e50; // $gray-600 !default;
 $success: $green !default;
 $info: $cyan !default;
 $warning: $yellow !default;
 $danger: $red !default;
 $light: $gray-100 !default;
 $dark: $gray-900 !default;
+$background: #fafafa;
 // scss-docs-end theme-color-variables
 
 // scss-docs-start theme-colors-map
 $theme-colors: (
   'primary': $primary,
+  'primary-light': $primary-light,
+  'primary-heavy': $primary-heavy,
+  'background': $background,
   'secondary': $secondary,
   'success': $success,
   'info': $info,
@@ -391,7 +397,9 @@ $spacers: (
 // scss-docs-start position-map
 $position-values: (
   0: 0,
+  25: 25%,
   50: 50%,
+  75: 75%,
   100: 100%
 ) !default;
 // scss-docs-end position-map
